--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                 <div class="slide-content">
                     <h2>Chào Mừng Đến Với Ruby Group</h2>
                     <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
-                    <a href="#services" class="btn-primary">Khám Phá Ngay</a>
+                    <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
                 </div>
             </div>
             <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
                 <div class="slide-content">
                     <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
                     <p>20+ Năm Kinh Nghiệm Trong Ngành</p>
-                    <a href="#about" class="btn-primary">Tìm Hiểu Thêm</a>
+                    <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
                 </div>
             </div>
             <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
                 <div class="slide-content">
                     <h2>Dịch Vụ Đa Dạng Chuyên Nghiệp</h2>
                     <p>Giải Pháp Toàn Diện Cho Mọi Khách Hàng</p>
-                    <a href="#services" class="btn-primary">Xem Dịch Vụ</a>
+                    <a href="contact.html" class="btn-primary">Xem Dịch Vụ</a>
                 </div>
             </div>
         </div>
