--- a/son.html
+++ b/son.html
@@ -39,36 +39,36 @@
     </header>
 
     
-
-    <!-- Hero Slider -->
-    <section class="hero-slider">
-        <div class="slider-container">
-            <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop') center/cover;">
-                <div class="slide-content">
-                    <h1>Chào Mừng Đến Với Ruby Group</h1>
-                    <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
-                    <a href="#services" class="btn-primary">Khám Phá Ngay</a>
-                </div>
-            </div>
-            <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
-                <div class="slide-content">
-                    <h1>Chất Lượng Là Ưu Tiên Hàng Đầu</h1>
-                    <p>20+ Năm Kinh Nghiệm Trong Ngành</p>
-                    <a href="#about" class="btn-primary">Tìm Hiểu Thêm</a>
-                </div>
-            </div>
-            <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
-                <div class="slide-content">
-                    <h1>Dịch Vụ Đa Dạng Chuyên Nghiệp</h1>
-                    <p>Giải Pháp Toàn Diện Cho Mọi Khách Hàng</p>
-                    <a href="#services" class="btn-primary">Xem Dịch Vụ</a>
-                </div>
+ <!-- Hero Slider -->
+ <section class="hero-slider">
+    <div class="slider-container">
+        <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop') center/cover;">
+            <div class="slide-content">
+                <h2>Chào Mừng Đến Với Ruby Group</h2>
+                <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
+                <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
             </div>
         </div>
-        <button class="slider-btn prev" id="prevBtn"><i class="fas fa-chevron-left"></i></button>
-        <button class="slider-btn next" id="nextBtn"><i class="fas fa-chevron-right"></i></button>
-        <div class="slider-dots" id="sliderDots"></div>
-    </section>
+        <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
+            <div class="slide-content">
+                <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
+                <p>20+ Năm Kinh Nghiệm Trong Ngành</p>
+                <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
+            </div>
+        </div>
+        <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
+            <div class="slide-content">
+                <h2>Dịch Vụ Đa Dạng Chuyên Nghiệp</h2>
+                <p>Giải Pháp Toàn Diện Cho Mọi Khách Hàng</p>
+                <a href="contact.html" class="btn-primary">Xem Dịch Vụ</a>
+            </div>
+        </div>
+    </div>
+    <button class="slider-btn prev" id="prevBtn"><i class="fas fa-chevron-left"></i></button>
+    <button class="slider-btn next" id="nextBtn"><i class="fas fa-chevron-right"></i></button>
+    <div class="slider-dots" id="sliderDots"></div>
+</section>
+
 
     <section class="about" id="about">
         <div class="container">
