--- a/tham-my.html
+++ b/tham-my.html
@@ -43,23 +43,23 @@
         <div class="slider-container">
             <div class="slide active" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop') center/cover;">
                 <div class="slide-content">
-                    <h1>Chào Mừng Đến Với Ruby Group</h1>
+                    <h2>Chào Mừng Đến Với Ruby Group</h2>
                     <p>Đối Tác Tin Cậy Cho Mọi Nhu Cầu Của Bạn</p>
-                    <a href="#services" class="btn-primary">Khám Phá Ngay</a>
+                    <a href="contact.html" class="btn-primary">Khám Phá Ngay</a>
                 </div>
             </div>
             <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1090638/pexels-photo-1090638.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
                 <div class="slide-content">
-                    <h1>Chất Lượng Là Ưu Tiên Hàng Đầu</h1>
+                    <h2>Chất Lượng Là Ưu Tiên Hàng Đầu</h2>
                     <p>20+ Năm Kinh Nghiệm Trong Ngành</p>
-                    <a href="#about" class="btn-primary">Tìm Hiểu Thêm</a>
+                    <a href="contact.html" class="btn-primary">Tìm Hiểu Thêm</a>
                 </div>
             </div>
             <div class="slide" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&w=1920') center/cover;">
                 <div class="slide-content">
-                    <h1>Dịch Vụ Đa Dạng Chuyên Nghiệp</h1>
+                    <h2>Dịch Vụ Đa Dạng Chuyên Nghiệp</h2>
                     <p>Giải Pháp Toàn Diện Cho Mọi Khách Hàng</p>
-                    <a href="#services" class="btn-primary">Xem Dịch Vụ</a>
+                    <a href="contact.html" class="btn-primary">Xem Dịch Vụ</a>
                 </div>
             </div>
         </div>
@@ -67,6 +67,7 @@
         <button class="slider-btn next" id="nextBtn"><i class="fas fa-chevron-right"></i></button>
         <div class="slider-dots" id="sliderDots"></div>
     </section>
+
 
     <!-- About Section -->
 <section class="about" id="about">
