--- a/tham-my.html
+++ b/tham-my.html
@@ -316,51 +316,70 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-col">
-                    <h3><i class="fas fa-gem"></i> Ruby Group</h3>
-                    <p>Tập đoàn đa ngành uy tín hàng đầu Việt Nam với hơn 20 năm kinh nghiệm phục vụ khách hàng.</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-                <div class="footer-col">
-                    <h4>Dịch Vụ</h4>
-                    <ul>
-                        <li><a href="son.html">Bán Sơn</a></li>
-                        <li><a href="tham-my.html">Thẩm Mỹ Viện</a></li>
-                        <li><a href="thiet-ke.html">Tư Vấn Thiết Kế</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Thông Tin</h4>
-                    <ul>
-                        <li><a href="index.html#about">Về Chúng Tôi</a></li>
-                        <li><a href="index.html#services">Dịch Vụ</a></li>
-                        <li><a href="index.html#contact">Liên Hệ</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Liên Hệ</h4>
-                    <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Nguyễn Huệ, Q1, HCM</li>
-                        <li><i class="fas fa-phone"></i> 1900 xxxx</li>
-                        <li><i class="fas fa-envelope"></i> info@rubygroup.vn</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Ruby Group. All rights reserved.</p>
-            </div>
+     <!-- Footer -->
+<footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        
+        <div class="footer-section">
+          <h3>Tập Đoàn Ruby Group</h3>
+          <p>Ruby Group – Tập đoàn đa lĩnh vực hàng đầu Việt Nam, chuyên cung cấp sơn cao cấp, dịch vụ tư vấn – thiết kế nội ngoại thất và hệ thống thẩm mỹ viện công nghệ cao.</p>
+          <div class="social-links">
+            <a href="https://www.facebook.com/profile.php?id=100063476167758"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://zalo.me/0815023789"><i class="fas fa-comment-dots"></i></a>
+          </div>
         </div>
-    </footer>
-
+  
+        <div class="footer-section">
+          <h3>Liên Hệ</h3>
+          <div class="contact-info">
+            <p><i class="fas fa-map-marker-alt"></i> Trụ sở chính: Số 68 Nguyễn Trãi, Quận Thanh Xuân, Hà Nội, Việt Nam</p>
+            <p><i class="fas fa-phone"></i> <a href="tel:0815023789">0815.023.789</a></p>
+            <p><i class="fas fa-envelope"></i> tapdoanrubygroup@gmail.com</p>
+            <p><i class="fas fa-clock"></i> 8:00 - 20:00 (Thứ 2 - Chủ nhật)</p>
+          </div>
+        </div>
+  
+        <div class="footer-section">
+          <h3>Dịch Vụ Chính</h3>
+          <ul>
+            <li><a href="son.html">Phân Phối Sơn Ruby Premium</a></li>
+            <li><a href="tu-van.html">Tư Vấn & Thiết Kế Nội Thất</a></li>
+            <li><a href="tham-my.html">Thẩm Mỹ Viện Ruby Group</a></li>
+            <li><a href="dao-tao.html">Đào Tạo & Hợp Tác Đại Lý</a></li>
+            <li><a href="lien-he.html">Hỗ Trợ Khách Hàng</a></li>
+          </ul>
+        </div>
+  
+        <div class="footer-section">
+          <h3>Bản Đồ & Chi Nhánh</h3>
+          <div class="map-container">
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3437.5977926090286!2d105.78300257522214!3d19.736404581608905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e1!3m2!1sen!2s!4v1759818344086!5m2!1sen!2s"
+              width="100%" 
+              height="300" 
+              style="border:0; border-radius: 10px;" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+          </div>
+          <ul style="margin-top: 15px;">
+            <li><a href="contact.html">Chi Nhánh Hà Nội</a></li>
+            <li><a href="contact.html">Chi Nhánh TP. Hồ Chí Minh</a></li>
+            <li><a href="contact.html">Chi Nhánh Thanh Hóa</a></li>
+            <li><a href="contact.html">Chi Nhánh Nghệ An</a></li>
+          </ul>
+        </div>
+      </div>
+  
+      <div class="footer-bottom">
+        <p>&copy; 2025 Tập Đoàn Ruby Group. Tất cả quyền được bảo lưu.</p>
+      </div>
+    </div>
+  </footer>
     <script src="main.js"></script>
 </body>
 </html>
