--- a/son.html
+++ b/son.html
@@ -79,7 +79,7 @@
             </div>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://images.pexels.com/photos/1643383/pexels-photo-1643383.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Ruby Group Paint Factory">
+                    <img src="./anh/son.jpg" alt="Ruby Group Paint Factory">
                 </div>
                 <div class="about-text">
                     <h3>Tập Đoàn Phân Phối Sơn Uy Tín Hàng Đầu Việt Nam</h3>
@@ -182,55 +182,121 @@
             <div class="product-grid">
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1669754/pexels-photo-1669754.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Sơn Nội Thất">
+                        <img src="./anh/sonlot.jpg" alt="Sơn Nội Thất">
                     </div>
                     <div class="product-info">
-                        <h3>Sơn Nội Thất Cao Cấp</h3>
+                        <h3>Sơn Lót Khánh Kiềm Nội Thất Tiêu Chuẩn</h3>
                         <p>Sơn nội thất thân thiện môi trường, không mùi, dễ thi công, màu sắc đẹp lâu phai. Phù hợp cho phòng khách, phòng ngủ, văn phòng.</p>
                     </div>
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1669799/pexels-photo-1669799.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Sơn Ngoại Thất">
+                        <img src="./anh/sonlotcaocap.jpg" alt="Sơn Ngoại Thất">
                     </div>
                     <div class="product-info">
-                        <h3>Sơn Ngoại Thất Chống Thấm</h3>
+                        <h3>Sơn Lót Khánh Kiềm Nội Thất Cao Cấp</h3>
                         <p>Sơn chống thấm vượt trội, chịu được mọi điều kiện thời tiết khắc nghiệt. Bảo vệ tường ngoài khỏi nấm mốc, rêu xanh.</p>
                     </div>
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1366957/pexels-photo-1366957.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Sơn Công Nghiệp">
+                        <img src="./anh/son1.jpg" alt="Sơn Công Nghiệp">
                     </div>
                     <div class="product-info">
-                        <h3>Sơn Công Nghiệp</h3>
+                        <h3>Sơn Lót Khánh Kiềm Ngoại Thất Cao Cấp</h3>
                         <p>Sơn chịu nhiệt cao, chống ăn mòn, chống hóa chất. Ứng dụng trong nhà máy, xưởng sản xuất, kho bãi công nghiệp.</p>
                     </div>
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1648776/pexels-photo-1648776.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Sơn Gỗ">
+                        <img src="./anh/son2.jpg" alt="Sơn Gỗ">
                     </div>
                     <div class="product-info">
-                        <h3>Sơn Gỗ & Đồ Gỗ</h3>
+                        <h3>Sơn Chống Thấm Hệ Trộn Với Xi Măng</h3>
                         <p>Sơn bảo vệ và tôn lên vẻ đẹp tự nhiên của gỗ. Chống mối mọt, chống thấm nước, giữ màu gỗ bền đẹp.</p>
                     </div>
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/159045/the-interior-of-the-repair-interior-design-159045.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Sơn Epoxy">
+                        <img src="./anh/son3.jpg" alt="Sơn Epoxy">
                     </div>
                     <div class="product-info">
-                        <h3>Sơn Epoxy Sàn</h3>
+                        <h3>Sơn Siêu Trắng Trần Nội Thất Cao Cấp</h3>
                         <p>Sơn epoxy cho sàn nhà xưởng, garage, showroom. Chống trầy xước, dễ vệ sinh, độ bền cao.</p>
                     </div>
                 </div>
                 <div class="product-item">
                     <div class="product-image">
-                        <img src="https://images.pexels.com/photos/1669799/pexels-photo-1669799.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Sơn Hiệu Ứng">
+                        <img src="./anh/son4.jpg" alt="Sơn Hiệu Ứng">
                     </div>
                     <div class="product-info">
-                        <h3>Sơn Hiệu Ứng Đặc Biệt</h3>
+                        <h3>Sơn Chống Thấm Màu Cao Cấp</h3>
+                        <p>Sơn tạo hiệu ứng nghệ thuật độc đáo như giả đá, giả gỗ, kim tuyến, rạn nứt. Tạo điểm nhấn ấn tượng.</p>
+                    </div>
+                </div>
+
+
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="./anh/son5.jpg" alt="Sơn Công Nghiệp">
+                    </div>
+                    <div class="product-info">
+                        <h3>Sơn Mịn Nội Thất Tiêu Chuẩn</h3>
+                        <p>Sơn chịu nhiệt cao, chống ăn mòn, chống hóa chất. Ứng dụng trong nhà máy, xưởng sản xuất, kho bãi công nghiệp.</p>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="./anh/son6.jpg" alt="Sơn Gỗ">
+                    </div>
+                    <div class="product-info">
+                        <h3>Sơn Bóng Nội Thất Cao Cấp</h3>
+                        <p>Sơn bảo vệ và tôn lên vẻ đẹp tự nhiên của gỗ. Chống mối mọt, chống thấm nước, giữ màu gỗ bền đẹp.</p>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="./anh/son7.jpg" alt="Sơn Epoxy">
+                    </div>
+                    <div class="product-info">
+                        <h3>Sơn Siêu Bóng Nội Thất Men Đặc Biệt</h3>
+                        <p>Sơn epoxy cho sàn nhà xưởng, garage, showroom. Chống trầy xước, dễ vệ sinh, độ bền cao.</p>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="./anh/son8.jpg" alt="Sơn Hiệu Ứng">
+                    </div>
+                    <div class="product-info">
+                        <h3>Sơn Mịn Ngoại Thất Cao Cấp</h3>
+                        <p>Sơn tạo hiệu ứng nghệ thuật độc đáo như giả đá, giả gỗ, kim tuyến, rạn nứt. Tạo điểm nhấn ấn tượng.</p>
+                    </div>
+                </div>
+
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="./anh/son9.jpg" alt="Sơn Gỗ">
+                    </div>
+                    <div class="product-info">
+                        <h3>Sơn Mịn Nội Thất Cao Cấp</h3>
+                        <p>Sơn bảo vệ và tôn lên vẻ đẹp tự nhiên của gỗ. Chống mối mọt, chống thấm nước, giữ màu gỗ bền đẹp.</p>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="./anh/son10.jpg" alt="Sơn Epoxy">
+                    </div>
+                    <div class="product-info">
+                        <h3>Sơn Bóng Ngoại Thất Cao Cấp</h3>
+                        <p>Sơn epoxy cho sàn nhà xưởng, garage, showroom. Chống trầy xước, dễ vệ sinh, độ bền cao.</p>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="./anh/son11.jpg" alt="Sơn Hiệu Ứng">
+                    </div>
+                    <div class="product-info">
+                        <h3>Sơn Siêu Bóng Ngoại Thất Men Sứ Đặc Biệt</h3>
                         <p>Sơn tạo hiệu ứng nghệ thuật độc đáo như giả đá, giả gỗ, kim tuyến, rạn nứt. Tạo điểm nhấn ấn tượng.</p>
                     </div>
                 </div>
